<resources>
    <string name="app_name">Tienda Bicicletas</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Mountain Bike</string>
    <string name="second_fragment_label">Product Detail</string>
    <string name="login_fragment_label">Acceso</string>
    <string name="crate_user_fragment_label">Registrar Cuenta</string>
    <string name="next">Next</string>
    <string name="comprar">Comprar</string>
    <string-array name="provinces">
        <item>Caba</item>
        <item>Buenos Aires</item>
        <item>Santa Fe</item>
        <item>Santa Cruz</item>
        <item>Salta</item>
    </string-array>
    <string name="hello_first_fragment">Recomendados</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="acceso">Acceso</string>
    <string name="correo">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="crearCta">Tiene cuenta? Creela</string>
    <string name="btnRegistrar">Registrar</string>
    <string name="name">Nombre</string>
    <string name="fecha_nac">Fecha de nacimiento</string>
    <string name="select_prov">Seleccione provincia</string>
    <string name="repeat">Repita contraseña</string>
</resources>