<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="ar.edu.unlam.tiendabicicletas.ProductListFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_product_list">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="ar.edu.unlam.tiendabicicletas.ProductDetailFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_product_detail">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
        <action
            android:id="@+id/action_SecondFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="ar.edu.unlam.tiendabicicletas.LoginFragment"
        android:label="@string/login_fragment_label"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_createUserFragment"
            app:destination="@id/createUserFragment" />
        <action
            android:id="@+id/action_loginFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_loginFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/createUserFragment"
        android:name="ar.edu.unlam.tiendabicicletas.CreateUserFragment"
        android:label="@string/crate_user_fragment_label"
        tools:layout="@layout/fragment_create_user">
        <action
            android:id="@+id/action_createUserFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_createUserFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/confirmBuyFragment"
        android:name="ar.edu.unlam.tiendabicicletas.ConfirmBuyFragment"
        android:label="fragment_confirm_buy"
        tools:layout="@layout/fragment_confirm_buy" />
</navigation>