<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CreateUserFragment">
    <View
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/user"
        app:layout_constraintBottom_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="@id/toolbar"
        app:layout_constraintTop_toTopOf="@id/toolbar"/>

    <ScrollView
        android:id="@+id/allInputs"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">


            <com.google.android.material.textfield.TextInputLayout
                app:layout_constraintTop_toTopOf="@id/allInputs"
              style="?attr/textInputFilledStyle"
                android:textColor="@color/grey_700"
                android:id="@+id/inputName"
                app:shapeAppearance="@style/Rounded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textColorHint="@color/grey_700">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:layout_constraintTop_toBottomOf="@id/inputName"
            style="?attr/textInputFilledStyle"
            android:textColor="@color/grey_700"
            android:id="@+id/inputEmail"
            app:shapeAppearance="@style/Rounded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo"
            android:textColorHint="@color/grey_700">
            <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:layout_marginHorizontal="20dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:layout_constraintTop_toBottomOf="@id/inputEmail"
        style="?attr/textInputFilledStyle"
        android:textColor="@color/grey_700"
        android:id="@+id/inputFecha"
        app:shapeAppearance="@style/Rounded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fecha_nac"
        android:textColorHint="@color/grey_700">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:layout_constraintTop_toBottomOf="@id/inputFecha"
        style="?attr/textInputFilledStyle"
        android:textColor="@color/grey_700"
        android:id="@+id/inputProvince"
        app:shapeAppearance="@style/Rounded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/select_prov"
        android:textColorHint="@color/grey_700">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:layout_marginHorizontal="20dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:layout_constraintTop_toBottomOf="@id/inputProvince"
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColorHint="@color/grey_700"
        android:textColor="@color/grey_700"
        app:endIconMode="password_toggle"
        app:shapeAppearance="@style/Rounded">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            android:textColorHint="@color/grey_700"
            />
    </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                app:layout_constraintTop_toBottomOf="@id/inputPassword"
                android:id="@+id/inputRepeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/repeat"
                android:textColorHint="@color/grey_700"
                android:textColor="@color/grey_700"
                app:endIconMode="password_toggle"
                app:shapeAppearance="@style/Rounded">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="11sp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginBottom="10dp"
                    android:textColorHint="@color/grey_700"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/btnRegistrar"
                android:textColor="@color/black"
                android:text="@string/btnRegistrar"
                android:textSize="14sp"
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/border_btn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>